--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <header class="site-header">
+        <nav>
+            <a href="#">Inicio</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Clientes</a>
+            <a href="#">Contactos</a>
+        </nav>
+    </header>
 </body>
 </html>
