--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Freelancer</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Krub:400,700&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/all.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Krub:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header class="site-header">
         <nav>
@@ -19,5 +21,13 @@
             <a href="#">Contactos</a>
         </nav>
     </header>
+    <div class="hero">
+        <div class="contenedor-hero">
+            <h1>Diseño y Desarrollo Freelance</h1>
+            <p><i class="fas fa-map-marker-alt"></i>Calahorra, La Rioja</p>
+            <a href="#" class="boton">Contactar</a>
+        </div>
+    </div>
 </body>
+
 </html>
