--- a/index.html
+++ b/index.html
@@ -28,6 +28,35 @@
             <a href="#" class="boton">Contactar</a>
         </div>
     </div>
+    <main class="servicios contenedor">
+        <h2>Nuestros Servicios</h2>
+        <div class="contenedor-servicios">
+            <div class="servicio">
+                <h3>Diseño Web</h3>
+                <div class="iconos">
+                    <i class="fas fa-pen-fancy"></i>
+                </div>
+                <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
+            </div>
+            <div class="servicio">
+                <h3>Aplicaciones Móviles</h3>
+                <div class="iconos">
+                    <i class="fab fa-android"></i>
+                    <i class="fab fa-apple"></i>
+                </div>
+                <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
+            </div>
+            <div class="servicio">
+                <h3>Social Media</h3>
+                <div class="iconos">
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook"></i>
+                </div>
+                <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
+            </div>
+            
+        </div>
+    </main>
 </body>
 
 </html>
