--- a/index.html
+++ b/index.html
@@ -28,35 +28,65 @@
             <a href="#" class="boton">Contactar</a>
         </div>
     </div>
-    <main class="servicios contenedor">
-        <h2>Nuestros Servicios</h2>
-        <div class="contenedor-servicios">
-            <div class="servicio">
-                <h3>Diseño Web</h3>
-                <div class="iconos">
-                    <i class="fas fa-pen-fancy"></i>
+    <div class="contenedor">
+        <main class="servicios">
+            <h2>Nuestros Servicios</h2>
+            <div class="contenedor-servicios">
+                <div class="servicio">
+                    <h3>Diseño Web</h3>
+                    <div class="iconos">
+                        <i class="fas fa-pen-fancy"></i>
+                    </div>
+                    <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
                 </div>
-                <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
-            </div>
-            <div class="servicio">
-                <h3>Aplicaciones Móviles</h3>
-                <div class="iconos">
-                    <i class="fab fa-android"></i>
-                    <i class="fab fa-apple"></i>
+                <div class="servicio">
+                    <h3>Aplicaciones Móviles</h3>
+                    <div class="iconos">
+                        <i class="fab fa-android"></i>
+                        <i class="fab fa-apple"></i>
+                    </div>
+                    <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
                 </div>
-                <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
-            </div>
-            <div class="servicio">
-                <h3>Social Media</h3>
-                <div class="iconos">
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-facebook"></i>
+                <div class="servicio">
+                    <h3>Social Media</h3>
+                    <div class="iconos">
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-facebook"></i>
+                    </div>
+                    <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
                 </div>
-                <p>Sit amet consectetur adipisicing elit. Quia, quidem deserunt! Dignissimos quidem placeat sit labore deserunt recusandae.</p>
+
             </div>
-            
-        </div>
-    </main>
+        </main>
+        <section id="contacto" class="contacto">
+            <h2>Contacto</h2>
+            <form action="#">
+                <legend>Contáctanos llenando todos los campos</legend>
+                <div class="contenedor-campos">
+                    <div class="campo">
+                        <label for="Nombre:"></label>
+                        <input type="text" name="nombre" placeholder="Nombre">
+                    </div>
+                    <div class="campo">
+                        <label for="Teléfono:"></label>
+                        <input type="tel" name="nombre" placeholder="Teléfono">
+                    </div>
+                    <div class="campo">
+                        <label for="Correo:"></label>
+                        <input type="mail" name="nombre" placeholder="Correo">
+                    </div>
+                    <div class="campo">
+                        <label for="Mensaje:"></label>
+                        <textarea></textarea>
+                    </div>
+                </div>
+                <!--contenedor-campos-->
+                <div class="enviar">
+                    <input type="submit" class="boton" value="enviar">
+                </div>
+            </form>
+        </section>
+    </div>
 </body>
 
 </html>
