Se termina el proyecto

--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
                 <legend>Contáctanos llenando todos los campos</legend>
                 <div class="contenedor-campos">
                     <div class="campo">
-                        <label for="Nombre:"></label>
+                        <label>Nombre:</label>
                         <input type="text" name="nombre" placeholder="Nombre">
                     </div>
                     <div class="campo">
-                        <label for="Teléfono:"></label>
+                        <label>Teléfono:</label>
                         <input type="tel" name="nombre" placeholder="Teléfono">
                     </div>
-                    <div class="campo">
-                        <label for="Correo:"></label>
+                    <div class="campo w-100">
+                        <label>Correo:</label>
                         <input type="mail" name="nombre" placeholder="Correo">
                     </div>
-                    <div class="campo">
-                        <label for="Mensaje:"></label>
+                    <div class="campo w-100">
+                        <label>Mensaje:</label>
                         <textarea></textarea>
                     </div>
                 </div>
